--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 __pycache__/app.cpython-312.pyc
 __pycache__/functions.cpython-312.pyc
 scanner_cache.json
+__pycache__/insights_functions.cpython-312.pyc
