--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ scanner_cache.json
 __pycache__/insights_functions.cpython-312.pyc
 __pycache__/scanner_functions.cpython-312.pyc
 __pycache__/analysis_functions.cpython-312.pyc
+__pycache__/analysis_functions.cpython-312.pyc
+__pycache__/irl_trading_functions.cpython-312.pyc
+__pycache__/scanner_functions.cpython-312.pyc
+scanner_cache.json
