Fix: Spanish stocks not being properly scanned

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ __pycache__/analysis_functions.cpython-312.pyc
 __pycache__/irl_trading_functions.cpython-312.pyc
 __pycache__/scanner_functions.cpython-312.pyc
 scanner_cache.json
+__pycache__/scanner_functions.cpython-312.pyc
